Phu Xuan code lai di, djt mek m