@@ -1,7 +1,9 @@
 package process;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.io.ObjectOutputStream;
 
 public class ProcessKill {
@@ -16,23 +18,17 @@ public class ProcessKill {
 	}
 
 	public void kill() throws IOException {
-		ListProcess lp = new ListProcess(this.oos);
-		if (lp.listProcess.contains(this.pID)) {
-			try {
-				ProcessBuilder pb = new ProcessBuilder("cmd", "/c", "taskkill /PID " + this.pID);
-				pb.directory(new File("C:"));
-				pb.start();
-				res = "Kill successfully!";
-			} catch (Exception e) {
-				// TODO: handle exception
-				res = "Coundn't kill this process!";
-			}
-		} else {
-			res = "Process not found!";
-		}
+		String commandLine = "taskkill /PID " + this.pID;
+	    Process p = Runtime.getRuntime().exec(commandLine);
+	    BufferedReader input = new BufferedReader(new InputStreamReader(p.getInputStream()));
+	    this.res = input.readLine();
+	    if(this.res.isEmpty()) {
+	    	this.res = "The system cannot find the path specified.";
+	    }
 	}
 
 	public void send_result() throws IOException {
 		oos.writeObject(this.res);
+		oos.flush();
 	}
 }
